--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>실시간 강수량</h1>
-    <iframe src="http://localhost:3000/interpolated_points.html" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="http://localhost:3000/interpolated_points.html" width="800vh" height="800vh" frameborder="0"></iframe>
     <button style="position: absolute; right: 10px; top: 10px;">새로고침</button>
 </body>
 </html>
